# newsletter-rust

./: Cargo.toml
.github/workflows/: general.yml
api/: Cargo.toml
api/src/: configurations.rs  lib.rs  startup.rs
api/src/routes/: subscriptions.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: mod.rs  prelude.rs  subscriptions.rs
migration/src/: m20220101_000001_create_table.rs
scripts/: init_db.sh
src/: main.rs
