[package]
name = "zerod2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "api", "entity"]

[dependencies]
api = { path = "api" }
tokio = { workspace = true }
dotenv = "0.15.0"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.152"
config = "0.13.3"
sea-orm = { version = "^0", features = [ 
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-time",
    "mock"
  ]}
